# gix-of-theseus

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
src/: actions.rs  allowed_filetypes.txt  blame.rs  file_types.rs  formatter.rs  gix_helpers.rs  lib.rs  main.rs  plot.rs  repo_blame_snapshot.rs  stackplot.py  theseus.rs
src/collectors/: list_in_range.rs  mod.rs
