[package]
name = "gix-of-theseus"
version = "1.0.0"
edition = "2024"
description = "Track a repo's composition over time"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/amedeedaboville/gix-of-theseus"
exclude = [".DS_Store", "**/.DS_Store"]

[[bin]]
name = "gix-of-theseus"
path = "src/main.rs"

[lib]
name = "gix_of_theseus"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4" }
clap = { version = "4.4.18", features = ["derive"] }
rayon = "1.10.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
gix-diff = "0.53.0"
gix-date = "0.10.5"
gix-object = "0.50.2"
gix-hash = "0.19.0"
gix-ref = "0.53.1"
gix-odb = "0.70.0"
gix-traverse = "0.47.0"
gix-filter = "0.20.0"
thread_local = "1.1"
anyhow = "1.0.99"
serde_json = "1.0.143"
crossbeam-channel = "0.5"
gix-worktree = "0.42.0"

[dev-dependencies]
proptest = "1"
