[package]
name = "gix-of-theseus"
version = "1.0.0"
edition = "2024"
description = "Track a repo's composition over time"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/amedeedaboville/gix-of-theseus"
exclude = [".DS_Store", "**/.DS_Store"]

[[bin]]
name = "gix-of-theseus"
path = "src/main.rs"

[lib]
name = "gix_of_theseus"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4" }
clap = { version = "4.4.18", features = ["derive"] }
rayon = "1.10.0"
indicatif = { version = "0.17.7", features = ["rayon"] }
gix = { version = "0.73.0", features = [
    "revision",
    "parallel",
    "max-performance",
    "blob-diff",
] }
thread_local = "1.1"
anyhow = "1.0.99"
serde_json = "1.0.143"
crossbeam-channel = "0.5"
globset = "0.4"

[dev-dependencies]
proptest = "1"
